--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
+    "build": "pkg dist/index.js -t node18-linux,node18-macos --out-path build/",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter=html --reporter=text mocha -r ./node_modules/ts-node/register/index.js 'tests/**/*.ts'"
   },
   "devDependencies": {
